# xlanguage_dubbing

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTES.md  README.md  README_en.md  README_ja.md  pyproject.toml
scripts/: run_config_matrix.py  setup_whisper.sh
src/ja_dubbing/: cli.py  config.py  omnivoice_tts.py  utils.py
src/ja_dubbing/asr/: vibevoice.py  whisper.py
src/ja_dubbing/core/: pipeline.py  progress.py
src/ja_dubbing/diarization/: speaker.py
src/ja_dubbing/servers/: health.py
src/ja_dubbing/translation/: plamo.py
src/ja_dubbing/tts/: reference.py  t5gemma_tts.py
src/xlanguage_dubbing/: cli.py  config.py  irodori_tts.py  kokoro_fastapi_tts.py  voxcpm2_tts.py
src/xlanguage_dubbing/audio/: demucs.py
src/xlanguage_dubbing/core/: pipeline.py
src/xlanguage_dubbing/servers/: health.py
src/xlanguage_dubbing/translation/: cat_translate.py  translategemma.py
src/xlanguage_dubbing/tts/: reference.py
